libs/sqf/tests/snapshots/compiler__simple_semicolons.snap
---
source: libs/sqf/tests/compiler.rs
expression: hex
---
010000000534000000024506000500005f746573740a000073797374656d636861740900005f7661726961626c650200003d3d02000069660400007468656e110000019f01000002001605000301010e0000746869732069732061207465737400b30000001c0000800300000000010100026002001e000900010001f60000236c696e65203120225c73656d69636f6c6f6e732e737166220a3b203b0a70726976617465205f640905203d20747275653b84030973797374656d4368617420222cc10122a10470e807077661726961626c65203d31a40002696620285f2884003088000b29207468656e207b0a202020203b94003be801bb047d3b0a3b950000902101000000139022010000061e61010270006924386301040001822606597401040600020000078368010607000200010100038db001010300027fa40104040001020003a2b0010d05000001010002d9000000000c0001001100000201000f00002f73656d69636f6c6f6e732e737166030400000000000000
