libs/sqf/tests/snapshots/compiler__simple_static_math.snap
---
source: libs/sqf/tests/compiler.rs
expression: hex
---
01000000051100000002220300040000737172740100007a0100002b11000001980000000200090400020000b841020000c8c2014a000031202b202832202a20322964010433362025203331ef012f203688010d737172742031303029202d20333b0a0a9c010f2d3130303b0a0a0a7a202b207a3b0a000200a1000978000601000000010100023671010372000743740000060600010007470000000006000100034500000000060002001100000201001000002f7374617469635f6d6174682e737166030300000000000000
