libs/sqf/tests/snapshots/compiler__simple_string_case.snap
---
source: libs/sqf/tests/compiler.rs
expression: hex
---
01000000050200000002130000110000017900000002002a03000104000061424364015a0000236c696e65203120225c737472696e675f636173652e737166220a746f4c6f77657220224122202b20746f5570707601622228340004416e7369202243a5024c7405a402000364223b0a00010000000000000002000000000100001100000201001000002f737472696e675f636173652e737166030200000000000000
